*MAJOR version is incremented when incompatible API changes are commited.
*MINOR version is incremented when new functionalities are commited, however the new implementation is still backward-compatible.
*PATCH version is incremented when backward-compatible bug fixes are commited.

The keys used are:
  !: fixed/modified feature, -: deleted feature, +: new feature


current (main branch) -- 29-05-2024
  + Adding the ability to disable the checks related to socket binding to a particular device

v1.1.4 -- 05-12-2023
  + Adding automatic version number retrieval from the VERSION file
  + Adding the ability to specify the release version for installation via the `install.sh` parameter
  ! Fixing the Cflags path within the grpc-collector.pc.in file
  ! Fixing the location where the huawei_sstream pointer is checked and (deleted)

v1.1.3 -- 07-10-2023
  + Adding dedicated vector per vendor to handle threads, standalone collector
  + Adding support for rhel & rocky Linux, install.sh script
  ! Adding checks before every "delete" statement to avoid double deletion
  ! Fixing Segfault issue affecting the start_grpc_dialout_collector() function
  ! Fixing memory leak affecting the Srv::*Stream::Start() functions
  ! Making the free_grpc_payload() and the InitGrpcPayload() function safer (pointers handling)
  ! Making start_grpc_dialout_collector() safer (vector to store the workers threads)
  + Implemented log_socket_options() function to enable logging of the configured socket options for enhanced debugging and transparency

v1.1.2 -- 26-06-2023
  + JunOS "sensor_path" formatted as JSON
  ! Testing gRPC dial-out support for Cisco NX-OS (testing device: NX-OS 10.2(2)@Nexus9000)
  ! Documentation general review/update | adding integration-with-pmtelemetryd.md | adding network-devices-conf-snip.md
  ! Minor, multiple, fixes on install.sh (install vs clone dir)

v1.1.1 -- 21-01-2023