@@ -993,6 +993,7 @@ bool KafkaCfgHandler::lookup_kafka_parameters(const std::string &cfg_path,
 
     if (params.at("security_protocol").compare("ssl") == 0) {
         bool ssl_key_location = kafka_params.exists("ssl_key_location");
+        bool ssl_key_password = kafka_params.exists("ssl_key_password");
         bool ssl_certificate_location =
             kafka_params.exists("ssl_certificate_location");
         bool ssl_ca_location = kafka_params.exists("ssl_ca_location");
@@ -1001,33 +1002,25 @@ bool KafkaCfgHandler::lookup_kafka_parameters(const std::string &cfg_path,
 
         if (ssl_key_location == true &&
             ssl_certificate_location == true &&
-            ssl_ca_location == true &&
-            enable_ssl_certificate_verification == true) {
+            ssl_ca_location == true) {
             libconfig::Setting &ssl_key_location =
                 kafka_params.lookup("ssl_key_location");
             libconfig::Setting &ssl_certificate_location =
                 kafka_params.lookup("ssl_certificate_location");
             libconfig::Setting &ssl_ca_location =
                 kafka_params.lookup("ssl_ca_location");
-            libconfig::Setting &enable_ssl_certificate_verification =
-                kafka_params.lookup("enable_ssl_certificate_verification");
             try {
                 std::string ssl_key_location_s = ssl_key_location.c_str();
                 std::string ssl_certificate_location_s =
                     ssl_certificate_location.c_str();
                 std::string ssl_ca_location_s = ssl_ca_location.c_str();
-                std::string enable_ssl_certificate_verification_s =
-                    enable_ssl_certificate_verification.c_str();
                 if (ssl_key_location_s.empty() == false &&
                     ssl_certificate_location_s.empty() == false &&
-                    ssl_ca_location_s.empty() == false &&
-                    enable_ssl_certificate_verification_s.empty() == false) {
+                    ssl_ca_location_s.empty() == false) {
                     params.insert({"ssl_key_location", ssl_key_location_s});
                     params.insert({"ssl_certificate_location",
                         ssl_certificate_location_s});
                     params.insert({"ssl_ca_location", ssl_ca_location_s});
-                    params.insert({"enable_ssl_certificate_verification",
-                        enable_ssl_certificate_verification_s});
                 } else {
                     spdlog::get("multi-logger")->
                         error("[security_protocol] "
@@ -1042,14 +1035,59 @@ bool KafkaCfgHandler::lookup_kafka_parameters(const std::string &cfg_path,
         } else {
             spdlog::get("multi-logger")->
                 error("[security_protocol] configuration issue: "
-                "a valid security_protocol is mandatory");
+                "one or more mandatory ssl params are missing");
             return false;
+        }
+
+        if (ssl_key_password == true) {
+            libconfig::Setting &ssl_key_password =
+                kafka_params.lookup("ssl_key_password");
+            try {
+                std::string ssl_key_password_s = ssl_key_password.c_str();
+                if (ssl_key_password_s.empty() == false) {
+                    params.insert({"ssl_key_password", ssl_key_password_s});
+                } else {
+                    spdlog::get("multi-logger")->
+                        error("[security_protocol] "
+                        "configuration issue: is invalid");
+                    return false;
+                }
+            } catch (const libconfig::SettingTypeException &ste) {
+                spdlog::get("multi-logger")->error("[security_protocol] "
+                    "configuration issue: {}", ste.what());
+                return false;
+            }
+        } else {
+            params.insert({"ssl_key_password", "NULL"});
+        }
+
+        if (enable_ssl_certificate_verification == true) {
+            libconfig::Setting &enable_ssl_certificate_verification =
+                kafka_params.lookup("enable_ssl_certificate_verification");
+            try {
+                std::string enable_ssl_certificate_verification_s =
+                    enable_ssl_certificate_verification.c_str();
+                if (enable_ssl_certificate_verification_s.empty() == false) {
+                    params.insert({"enable_ssl_certificate_verification",
+                        enable_ssl_certificate_verification_s});
+                } else {
+                    spdlog::get("multi-logger")->
+                        error("[security_protocol] "
+                        "configuration issue: is invalid");
+                    return false;
+                }
+            } catch (const libconfig::SettingTypeException &ste) {
+                spdlog::get("multi-logger")->error("[security_protocol] "
+                    "configuration issue: {}", ste.what());
+                return false;
+            }
+        } else {
+            params.insert({"enable_ssl_certificate_verification", "NULL"});
         }
     } else {
         params.insert({"ssl_key_location", "NULL"});
         params.insert({"ssl_certificate_location", "NULL"});
         params.insert({"ssl_ca_location", "NULL"});
-        params.insert({"enable_ssl_certificate_verification", "NULL"});
     }
 
     return true;
